  * checks/fields.desc:
    + [CL] Warn for Homepage files using well-known insecure URIs.
      (Closes: #849514)
  * checks/files.pm:
    + [NT] Add missing slash for usr/sbin that caused lintian to report
      false-positive multiarch-foreign-shared-library when a package
      only had executables in usr/sbin.  Thanks to Helmut Grohne for
      reporting the issue.
  * checks/version-substvars.desc:
    + [CL] Don't recommend "Source-Version" in tag descriptions.

  * data/fields/*:
    + [CL] Revert patch from Guillem Jover to add a "golang" archive
      section; it has not ben added to the archive yet.
  * data/spelling/corrections:
    + [PW] Add several corrections.

  * lib/Test/Lintian/Harness.pm, t/runtests, t/tests/README:
    + [AB] Add support for a "Test-Conflicts" field.

  * t/tests/rules-including-deprecated-makefiles/desc:
    + [AB] Add "Test-Conflict: dh-buildinfo". Having dh-buildinfo
      installed causes that test to fail.

  * .gitignore:
    + [AB] Ignore /debian/.debhelper/ directory.

 -- Chris Lamb <lamby@debian.org>  Thu, 09 Nov 2017 09:09:49 +0000

lintian (2.5.59) unstable; urgency=medium

  * lib/Lintian/Check.pm:
    + [CL] Don't warn about duplicate words when separated by punctuation.
      (Closes: #822504)

  * data/fields/*:
    + [CL] Apply patch from Guillem Jover to add a "golang" archive
      section.  (Closes: #880701)

 -- Chris Lamb <lamby@debian.org>  Thu, 09 Nov 2017 08:48:00 +0000

lintian (2.5.58) unstable; urgency=medium

  * checks/cruft.pm:
    + [CL] Rewrite file-contains-trailing-whitespace tag to be a hash from
      the filename to the regex we should match.
    + [CL] Allow trailing tabs in debian/rules files; they are a very
      common idiom in Makefiles.
  * checks/fields.desc:
    + [SL] Update of the documentation for the change introduced in 2.5.53:
      Transitional packages should now be "oldlibs/optional" rather
      than "oldlibs/extra".
  * checks/python.pm: