@@ -1,0 +1,11 @@
+#!/usr/bin/make -f
+
+tmp := $(CURDIR)/debian/$(shell dh_listpackages)
+
+%:
+	dh $@
+
+override_dh_install:
+	dh_install
+	mkdir -p $(tmp)/usr/share/foo
+	touch $(tmp)/usr/share/foo/-
