@@ -1,0 +1,1 @@
+E: files-hyphen-file: hyphen-file usr/share/foo/-
